--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "cookie-getter": "1.0.1",
     "jquery": "2.2.0",
-    "lodash": "4.0.0"
+    "lodash": "4.0.0",
+    "uuid": "2.0.1"
   }
 }
